--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ body{
 
 
 
-#galeriaContainer{
+#glaeriaSubContainer{
     margin-bottom: 15px;
     display: -webkit-box;
     display: -ms-flexbox;
