--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ body{
 #galleryModal{
     position: absolute;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     background: rgba(0, 0, 0, 0.9);
     z-index: 100;
     display: none;
