--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ body{
     position: absolute;
     height: 100vh;
     width: 100vw;
-    background: rgb(54, 54, 54);
+    background: rgba(0, 0, 0, 0.9);
     z-index: 100;
     display: none;
 }
