--- a/style.css
+++ b/style.css
@@ -324,32 +324,38 @@ body{
     position: absolute;
     bottom: 0px;
     width: 100%;
+    height: 100vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    text-align: center;
+    
 
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 600;
 }
 .galleryNavigation{
     width: 50%;
     color: #eee;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
     user-select: none;
+    padding: 0 5vw;
 }
+#galleryNavRight span{
+    text-align: right;
+}
+
+
 .galleryNavigation:hover{
     cursor: pointer;
     color: #ffd500;
-    background: rgba(0, 0, 0, 0.5);
-}
-.galleryNavigation:focus{
-    color: #eee;
-    background: rgba(0, 0, 0, 0.4);
 }
 
 
