--- a/style.css
+++ b/style.css
@@ -1,1 +1,605 @@
-#myNav,*{-webkit-box-sizing:border-box}#arrowDown,#galleryModal,#galleryNav,#photosCounting{position:absolute}#galleryNav,#heading,#reservation,.akcnaCena,.bold{font-weight:600}#mainHeader,.galleryNavigation{-webkit-box-orient:vertical;-webkit-box-direction:normal}.example{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-transition:all .5s;-o-transition:all .5s;transition:all .5s;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;background:-webkit-gradient(linear,left top,left bottom,from(white),to(black));background:-webkit-linear-gradient(top,#fff,#000);background:-o-linear-gradient(top,#fff,#000);background:linear-gradient(to bottom,#fff,#000)}#mainHeader,#myNav,.polozkaCena{display:-webkit-box;display:-ms-flexbox}#arrowDown,#myNav{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none}#arrowDown,#mainHeader{background-position:center}@import url(https://fonts.googleapis.com/css?family=Poppins:400,600&subset=latin-ext);*{margin:0;padding:0;box-sizing:border-box}body{font-family:Poppins,Arial,Helvetica,sans-serif;font-size:16px;line-height:1.6}#myNav{max-width:1000px;overflow:hidden;width:100%;margin:0 auto;left:0;right:0;display:flex;background:rgba(0,0,0,.75);box-sizing:border-box;position:fixed;z-index:20;user-select:none}.cena,.pocetOsob{-webkit-box-sizing:border-box}.red{color:#db0101}#logo{width:10%;background:url(logo.png) center center no-repeat;background-size:contain}#logo:hover{cursor:pointer}.navItem{padding:6px 0;width:30%;text-align:center}.navItem:hover{cursor:pointer;color:gold}#myNav a{font-size:26px;text-decoration:none;color:#eee}#myNav a:hover{text-decoration:none;color:gold}#mainHeader{background-image:url(images/bg3.jpeg);height:100vh;width:100%;background-size:cover;display:flex;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}#landingContainer{padding:10px 35px;color:#fff;text-align:center;margin-bottom:10vh}#heading{font-size:52px;color:gold}#subHeading{font-size:24px}#reservation{text-align:center;font-size:38px;color:#eee;z-index:1}#price{color:gold}#phoneLandingPage{background:rgba(255,215,0,.7);border-radius:5px;color:#111;margin-top:10px}#arrowDown{width:44px;height:44px;background-image:url(images/arrowDown32.png);background-repeat:no-repeat;left:50%;-webkit-transform:translate(-50%);-ms-transform:translate(-50%);transform:translate(-50%);bottom:2vh;border:2px solid rgba(238,238,238,.705);border-radius:50%;z-index:0;-o-user-select:none;user-select:none}#arrowDown:hover{border:2px solid gold;cursor:pointer}.adressItemHead,.cennikHead{border-bottom:1px solid #333}#mainSectionContainer{background:#fafafa;color:#333}.sectionContainer{max-width:1000px;width:60%;margin:0 auto;font-size:20px}#mainSectionContainer section{padding:64px 0 80px}.sectionSubHeading{font-size:16px}#mainSectionContainer section .sectionHeading{font-weight:600;font-size:26px;text-transform:uppercase;padding:0 0 30px;text-align:center}#uvod{text-align:center}#iconContainer{margin-top:30px}#iconContainer img{height:50px;padding:5px 15px}#cennik,#hodnotenie{background:#ebe9e9}#cennik .sectionHeading{line-height:1.2}.cennikHead{text-align:center}.cennikByt{max-width:600px;margin:0 auto 40px}.polozkaCena{display:flex}#actualPhoto,#galleryNav,.galleryNavigation{display:-webkit-box;display:-ms-flexbox}.pocetOsob{width:40%;box-sizing:border-box;padding-left:10px}.cena{width:60%;box-sizing:border-box;text-align:center}.quoteSign,.samotneHodnotenie{-webkit-box-sizing:border-box}.akcnaCena{color:#db0101}.normalnaCena{text-decoration:line-through}#cenaDodatok{padding-top:10px}#cenaDodatok p{margin-bottom:6px;font-size:18px}.galeriaColumn{float:left;width:25%;padding:0 5px}.galeriaColumn img{width:100%;margin-top:5px}.galeriaColumn img:hover{cursor:pointer}#galeriaRow:after{clear:both;content:"";display:table}#galeriaHelpText{margin-bottom:10px;text-align:center}#galleryModal{height:100vh;width:100vw;background:rgba(0,0,0,.9);z-index:100;display:none}#crossCloseGalleryModal{position:absolute;color:#ccc;font-size:36px;top:5px;right:25px;z-index:110}#crossCloseGalleryModal:hover{cursor:pointer;color:#ffd500}#photosCounting{width:100%;padding:15px 0 8px;font-size:18px;text-align:center;color:#eee;background:rgba(0,0,0,.6);z-index:105}#galleryNavRight span,.menoHodnotenie,.quoteSign{text-align:right}.imageGallery{max-width:100%;-o-object-fit:contain;object-fit:contain}#actualPhoto{margin:0 auto;width:98%;height:100vh;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}#galleryNav{bottom:0;width:100%;height:100vh;display:flex;font-size:40px}.galleryNavigation{width:50%;color:#eee;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-ms-flex-direction:column;flex-direction:column;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none;padding:0 5vw}#hodnotenieContainer,.samotneHodnotenie{display:-webkit-box;display:-ms-flexbox}.galleryNavigation:hover{cursor:pointer;color:#ffd500}#hodnotenieContainer{font-family:Georgia,'Times New Roman',Times,serif;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}.samotneHodnotenie{margin-bottom:20px;box-sizing:border-box;width:50%;display:flex}#footerContainer,#kontaktContainer{display:-webkit-box;display:-ms-flexbox}.quoteHodnotenie{width:92%}.quoteHodnotenie blockquote{padding:10px 25px 0 10px}.quoteSign{box-sizing:border-box;font-size:60px;margin-top:-15px;width:8%}.menoHodnotenie{padding:0 15px 0 0}#kontaktContainer{display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}.adressItem{width:50%;margin-bottom:1px;-webkit-box-sizing:border-box;box-sizing:border-box;padding:10px}#odkazNaMapy,.adressItemHead{margin-bottom:10px}.adressItemHead{text-align:center}#actualAdress{margin-bottom:5px}#mainSectionContainer #kontakt{padding-bottom:50px}#odkazNaMapy a{background:#ffe044;color:#333;border-radius:4px;padding:2px 7px;text-decoration:none}#odkazNaMapy a:hover{background:#ffd311}#map{width:100%;height:400px}footer{font-size:12px;background:#5f5f5f;color:#d1d1d1;padding:25px 20px}#footerContainer{max-width:1000px;width:60%;margin:0 auto;display:flex}#footerLeft{width:50%}#footerRight{width:50%;text-align:right}#footerLeft p,#footerRight p{padding:3px 0}#prevadzkovatel{padding:0;max-width:120px;border-bottom:1px solid #ccc}#creatorContainer{margin-top:15px}#creator{text-decoration:none;color:#eee}#creator:hover{cursor:pointer}@media (max-width:1000px){#myNav a{font-size:24px}#landingContainer{padding:10px 20px}#heading{font-size:42px;line-height:1.3;margin-bottom:10px}#reservation{font-size:calc(20px + 1vw)}.sectionContainer{width:80%;font-size:18px}#kontaktAdresa,#kontaktFormular{width:100%}#footerContainer{width:90%}}@media (max-width:678px){#myNav a,#subHeading{font-size:20px}#heading{font-size:38px}#iconContainer img{height:44px;padding:5px 8px}#mainSectionContainer section .sectionHeading{font-size:22px}#cenaDodatok p{margin-bottom:6px;font-size:16px}.galeriaColumn{width:50%}.samotneHodnotenie{width:100%}.quoteSign{font-size:50px;margin-top:-10px}}@media (max-width:414px){.sectionContainer{width:90%;font-size:16px}#footerContainer{width:100%}.sectionSubHeading{font-size:14px}#cenaDodatok p{font-size:15px}#iconContainer img{height:40px;padding:5px 3px}}
+/* Put your CSS code in the left column, instead of example, to put or remove unnecessary prefixes. */
+
+.example {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -webkit-linear-gradient(top, white, black);
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
+}@import url('https://fonts.googleapis.com/css?family=Poppins:400,600&subset=latin-ext');
+
+*{
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    /* border: 1px solid red;     */
+}
+
+body{
+    font-family: "Poppins",Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+}
+
+#myNav{
+    max-width: 1000px;
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background: rgba(0, 0, 0, 0.75);
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    position: fixed;
+    z-index: 20;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.bold{
+    font-weight: 600;
+}
+.red{
+    color: rgb(219, 1, 1);
+}
+
+
+/* PAGE NAVIGATION */
+#logo{
+    width: 10%;
+    background: url("logo.png") center center no-repeat;
+    background-size: contain;
+}
+#logo:hover{
+    cursor: pointer;
+}
+.navItem{
+    padding: 6px 0;
+    width: 30%;
+    text-align: center;
+}
+.navItem:hover{
+    cursor: pointer;
+    color: #FFD700; 
+}
+#myNav a{
+    font-size: 26px;;
+    text-decoration: none;
+    color: #eee; 
+}
+#myNav a:hover{
+    text-decoration: none;
+    color: #FFD700; 
+}
+
+
+/* LAND PAGE HEADING */
+#mainHeader{
+    background-image: url("images/bg3.jpeg");
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+#landingContainer{
+    padding: 10px 35px;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 10vh;
+}
+#heading{
+    font-size: 52px;
+    font-weight: 600;
+    color: #FFD700;
+}
+#subHeading{
+    font-size: 24px;
+}
+#reservation{
+    text-align: center;
+    font-size: 38px;
+    font-weight: 600;
+    color: #eee;
+    z-index: 1;
+}
+#price{
+    color: #FFD700;
+}
+#phoneLandingPage{
+    background: rgba(255, 215, 0, 0.7);
+    border-radius: 5px;
+    color: #111;
+    margin-top: 10px;
+    
+}
+#arrowDown{
+    position: absolute;
+    width: 44px;
+    height: 44px;
+    background-image: url("images/arrowDown32.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
+    bottom: 2vh;
+
+    border: 2px solid rgba(238, 238, 238, 0.705);
+    border-radius: 50%;
+    z-index: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+#arrowDown:hover{
+    border: 2px solid #FFD700;
+    cursor: pointer;
+}
+
+
+/* MAIN SECTION */
+#mainSectionContainer{
+    background: rgb(250, 250, 250);
+    color: #333;
+}
+.sectionContainer{
+    max-width: 1000px;
+    width: 60%;
+    margin: 0 auto;
+    font-size: 20px;
+}
+
+#mainSectionContainer section{
+    padding: 64px 0 80px 0;
+}
+
+.sectionSubHeading{
+    font-size: 16px;
+}
+
+#mainSectionContainer section .sectionHeading{
+    font-weight: 600;
+    font-size: 26px;
+    text-transform: uppercase;
+    padding: 0px 0 30px 0;
+    text-align: center;
+}
+
+
+/* UVOD */
+#uvod{
+    text-align: center;
+}
+#iconContainer{
+    margin-top: 30px;
+    /* border: 1px solid red; */
+}
+#iconContainer img{
+    height: 50px;
+    padding: 5px 15px;
+    /* border: 1px solid red; */
+}
+
+
+
+/* CENNIK */
+#cennik, #hodnotenie{
+    background: rgb(235, 233, 233);
+}
+
+#cennik .sectionHeading{
+    line-height: 1.2;
+}
+
+.cennikHead{
+    text-align: center;
+    border-bottom: 1px solid #333;
+}
+.cennikByt{
+    max-width: 600px;
+    margin: 0 auto 40px auto; 
+}
+.polozkaCena{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+.pocetOsob{
+    width: 40%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding-left: 10px;
+}
+.cena{
+    width: 60%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    text-align: center;
+}
+
+.akcnaCena{
+    color: rgb(219, 1, 1);
+    font-weight: 600;
+}
+.normalnaCena{
+    text-decoration: line-through;
+}
+#cenaDodatok{
+    padding-top: 10px;
+}
+#cenaDodatok p{
+    margin-bottom: 6px;
+    font-size:18px;
+}
+
+
+/* GALERIA */
+.galeriaColumn{
+    float: left;
+    width: 25%;
+    padding: 0 5px;
+    /* border: 1px solid red; */
+}
+.galeriaColumn img{
+    width: 100%;
+    margin-top: 5px;
+}
+.galeriaColumn img:hover{
+    cursor: pointer;
+}
+#galeriaRow:after{
+    clear: both;
+    content: "";
+    display: table;
+    /* border: 1px solid red; */
+}
+#galeriaHelpText{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+
+
+/* GALLERY MODAL */
+#galleryModal{
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.9);
+    z-index: 100;
+    display: none;
+}
+#crossCloseGalleryModal{
+    position: absolute;
+    color: #ccc;    
+    font-size: 36px;
+    top: 5px;
+    right: 25px;
+    z-index: 110;
+}
+#crossCloseGalleryModal:hover{
+    cursor: pointer;
+    color: #ffd500;
+}
+
+#photosCounting{
+    position: absolute;
+    width: 100%;
+    padding: 15px 0 8px 0;
+    font-size: 18px;
+    text-align: center;
+    color: #eee;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 105;
+}
+.imageGallery{
+    max-width: 100%;
+    /* max-height: 100%; */
+    -o-object-fit: contain;
+       object-fit: contain;
+}
+#actualPhoto{
+    margin: 0 auto;
+    width: 98%;
+    height: 100vh;
+    /* border: 1px solid red; */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+#galleryNav{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    
+    font-size: 40px;
+    font-weight: 600;
+}
+.galleryNavigation{
+    width: 50%;
+    color: #eee;
+    /* background: rgba(0, 0, 0, 0); */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    padding: 0 5vw;
+}
+#galleryNavRight span{
+    text-align: right;
+}
+.galleryNavigation:hover{
+    cursor: pointer;
+    color: #ffd500;
+}
+
+
+
+/* HODNOTENIE */
+#hodnotenieContainer{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+}
+.samotneHodnotenie{
+    margin-bottom: 20px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+.quoteHodnotenie{
+    width: 92%;
+}
+.quoteHodnotenie blockquote{
+   padding: 10px 25px 0 10px;
+}
+.quoteSign{
+    text-align: right;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    font-size: 60px;
+    margin-top: -15px;
+    width: 8%;
+}
+.menoHodnotenie{
+    text-align: right;
+    padding: 0 15px 0 0;
+}
+
+
+/* KONTAKT */
+#kontaktContainer{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+}
+.adressItem{
+    width: 50%;
+    margin-bottom: 1px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding: 10px;
+
+    /* border: 1px solid red; */
+}
+.adressItemHead{
+    text-align: center;
+    border-bottom: 1px solid #333;
+    margin-bottom: 10px; 
+}
+#actualAdress{
+    margin-bottom: 5px;
+}
+#mainSectionContainer #kontakt{
+    padding-bottom: 50px;
+}
+#odkazNaMapy{
+    margin-bottom: 10px;
+}
+#odkazNaMapy a{
+    background: #ffe044;
+    color: #333;
+    border-radius: 4px;
+    padding: 2px 7px;
+    text-decoration: none;
+}
+#odkazNaMapy a:hover{
+    background: #ffd311;
+}
+
+
+/* MAP */
+#map{
+    width: 100%;
+    height: 400px;
+}
+
+
+
+/* FOOTER */
+footer{
+    font-size: 12px;
+    background: rgb(95, 95, 95);
+    color: rgb(209, 209, 209);
+    padding: 25px 20px;
+}
+#footerContainer{
+    max-width: 1000px;
+    width: 60%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+#footerLeft{
+    width: 50%;
+}
+#footerRight{
+    width: 50%;
+    text-align:  right;
+}
+#footerLeft p, #footerRight p{
+    padding: 3px 0;
+}
+#prevadzkovatel{
+    padding: 0 0;
+    max-width: 120px;
+    border-bottom: 1px solid #ccc;
+}
+#creatorContainer{
+    margin-top: 15px;
+}
+#creator{
+    text-decoration: none;
+    color: #eee;
+}
+#creator:hover{
+    cursor: pointer;
+}
+
+
+
+
+@media (max-width: 1000px){
+    #myNav a{
+        font-size: 24px;;
+    }
+    #landingContainer{ 
+        padding: 10px 20px;  
+    }
+    #heading{
+        font-size: 42px;
+        line-height: 1.3;
+        margin-bottom: 10px;
+    }
+    #reservation{
+        font-size: calc(20px + 1vw);
+    }
+    .sectionContainer{
+        width: 80%;
+        font-size: 18px;
+    }
+    #kontaktAdresa,#kontaktFormular{
+        width: 100%;
+    }
+    #footerContainer{
+        width: 90%;
+    }
+    
+}
+
+@media (max-width: 678px){
+    #myNav a{
+        font-size: 20px;
+    }
+    #heading{
+        font-size: 38px;
+    }
+    #subHeading{
+        font-size: 20px;
+    }
+    #iconContainer img{
+        height: 44px;
+        padding: 5px 8px;
+    }
+    #mainSectionContainer section .sectionHeading{
+        font-size: 22px;
+    }
+    #cenaDodatok p{
+        margin-bottom: 6px;
+        font-size: 16px;
+    }
+    .galeriaColumn{
+        width: 50%;
+    }
+    .samotneHodnotenie{
+        width: 100%;
+    }
+    .quoteSign{
+        font-size: 50px;
+        margin-top: -10px;        
+    }
+    
+}
+
+
+@media (max-width: 414px){
+    .sectionContainer{
+        width: 90%;
+        font-size: 16px;
+    }
+    #footerContainer{
+        width: 100%;
+    }
+    .sectionSubHeading{
+        font-size: 14px;
+    }
+    #cenaDodatok p{
+        font-size: 15px;
+    }
+    
+    #iconContainer img{
+        height: 40px;
+        padding: 5px 3px;
+    }
+}
