--- a/style.css
+++ b/style.css
@@ -1,28 +1,10 @@
-/* Put your CSS code in the left column, instead of example, to put or remove unnecessary prefixes. */
-
-.example {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-transition: all .5s;
-    -o-transition: all .5s;
-    transition: all .5s;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
-    background: -webkit-linear-gradient(top, white, black);
-    background: -o-linear-gradient(top, white, black);
-    background: linear-gradient(to bottom, white, black);
-}@import url('https://fonts.googleapis.com/css?family=Poppins:400,600&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,600&subset=latin-ext');
 
 *{
     margin: 0;
     padding: 0;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    /* border: 1px solid red;     */
 }
 
 body{
