--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body{
 }
 #subHeading{
     font-size: 24px;
+    font-weight: normal;
 }
 #reservation{
     text-align: center;
@@ -539,6 +540,9 @@ footer{
     }
     #subHeading{
         font-size: 20px;
+    }
+    #mainSectionContainer section{
+        padding: 50px 0 60px 0;
     }
     #iconContainer img{
         height: 44px;
