--- a/style.css
+++ b/style.css
@@ -12,11 +12,15 @@ body{
     font-size: 16px;
     line-height: 1.6;
 }
-
+.nav{
+    position: absolute;
+    background: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    position: fixed;
+    z-index: 20;
+}
 #myNav{
     max-width: 1000px;
-    position: absolute;
-    overflow: hidden;
     width: 100%;
     margin: 0 auto;
     left: 0;
@@ -24,11 +28,11 @@ body{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    background: rgba(0, 0, 0, 0.75);
+    
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    position: fixed;
-    z-index: 20;
+    
+    
     -moz-user-select: none;
     -ms-user-select: none;
     -webkit-user-select: none;
@@ -45,7 +49,7 @@ body{
 
 /* PAGE NAVIGATION */
 #logo{
-    width: 10%;
+    width: 12%;
     background: url("logo.png") center center no-repeat;
     background-size: contain;
 }
@@ -54,7 +58,7 @@ body{
 }
 .navItem{
     padding: 6px 0;
-    width: 30%;
+    width: 22%;
     text-align: center;
 }
 .navItem:hover{
@@ -160,7 +164,7 @@ body{
 }
 .sectionContainer{
     max-width: 1000px;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     font-size: 20px;
 }
@@ -606,6 +610,9 @@ footer{
 
 
 @media (max-width: 414px){
+    #myNav a{
+        font-size: 16px;;
+    }
     .sectionContainer{
         width: 90%;
         font-size: 16px;
