--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ body {
 
 #crossCloseGalleryModal {
   position: absolute;
+  cursor: pointer;
   color: #ccc;
   font-size: 36px;
   top: 5px;
@@ -306,7 +307,6 @@ body {
   z-index: 110; }
 
 #crossCloseGalleryModal:hover {
-  cursor: pointer;
   color: #ffd500; }
 
 #photosCounting {
@@ -321,7 +321,6 @@ body {
 
 .imageGallery {
   max-width: 100%;
-  /* max-height: 100%; */
   -o-object-fit: contain;
   object-fit: contain; }
 
@@ -329,7 +328,6 @@ body {
   margin: 0 auto;
   width: 98%;
   height: 100vh;
-  /* border: 1px solid red; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -507,18 +505,54 @@ footer {
   cursor: pointer; }
 
 #loadingModal {
-  z-index: 500;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  color: #eee;
-  display: none;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.85);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  z-index: 500; }
+
+.spinner {
+  margin: 0 auto; }
+
+.spinner > div {
+  width: 36px;
+  height: 36px;
+  background-color: #ffd500;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: tripleDots 1.4s infinite ease-in-out both;
+  animation: tripleDots 1.4s infinite ease-in-out both; }
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s; }
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s; }
+
+@-webkit-keyframes tripleDots {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1); } }
+
+@keyframes tripleDots {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1); } }
 
 @media (max-width: 1000px) {
   #landingContainer {
