--- a/css/style.css
+++ b/css/style.css
@@ -39,18 +39,16 @@ body {
 .red {
   color: #db0101; }
 
+.color-gold {
+  color: #FFD700; }
+
+.bg-gray {
+  background: #ebe9e9; }
+
 /* PAGE NAVIGATION */
-#logo {
-  width: 12%;
-  background: url("../images/logo.png") center center no-repeat;
-  background-size: contain; }
-
-#logo:hover {
-  cursor: pointer; }
-
 .navItem {
   padding: 6px 0;
-  width: 22%;
+  width: 20%;
   text-align: center; }
 
 .navItem:hover {
@@ -58,7 +56,7 @@ body {
   color: #FFD700; }
 
 #myNav {
-  font-size: 26px;
+  font-size: 20px;
   text-decoration: none;
   color: #eee;
   -webkit-transition: all .5s;
@@ -106,22 +104,29 @@ body {
 
 #reservation {
   text-align: center;
-  font-size: 38px;
   font-weight: 600;
   color: #eee;
-  z-index: 1; }
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 8px 40px;
+  border-radius: 5px;
+  font-weight: normal;
+  font-size: 30px; }
+
+.reservation-container {
+  color: #FFD700;
+  font-weight: 600; }
 
 #price {
   color: #FFD700; }
 
-#phoneLandingPage {
-  background: rgba(255, 215, 0, 0.7);
-  border-radius: 5px;
-  color: #111;
-  margin-top: 10px; }
-  #phoneLandingPage a {
-    text-decoration: none;
-    color: black; }
+#phoneLandingPage a {
+  text-decoration: none;
+  color: #FFD700; }
+
+#emailLandingPage {
+  font-size: 22px;
+  font-weight: normal; }
 
 #arrowDown {
   position: absolute;
@@ -210,16 +215,24 @@ body {
   padding: 5px 15px;
   /* border: 1px solid red; */ }
 
-/* CENNIK */
-#cennik, #hodnotenie {
-  background: #ebe9e9; }
+.vybavenie-zoznam {
+  padding-left: 24px;
+  margin-bottom: 26px; }
+  .vybavenie-zoznam li {
+    line-height: 1.4;
+    margin-bottom: 6px; }
 
+.vybavenie-subheading {
+  margin-bottom: 12px; }
+
+/* CENNIK */
 #cennik .sectionHeading {
   line-height: 1.2; }
 
 .cennikHead {
   text-align: center;
-  border-bottom: 1px solid #333; }
+  border-bottom: 1px solid #333;
+  font-size: 21px; }
 
 .bytContainer {
   max-width: 600px;
@@ -229,8 +242,9 @@ body {
   border-bottom: 1px dashed #888; }
 
 .vybavenie {
-  font-size: 16px;
-  padding: 5px 10px; }
+  padding: 5px 10px;
+  color: #646464;
+  line-height: 1.3; }
 
 .polozkaCena {
   display: -webkit-box;
@@ -308,11 +322,12 @@ body {
 #crossCloseGalleryModal:hover {
   color: #ffd500; }
 
-#photosCounting {
+#modalGalleryHeading {
   position: absolute;
   width: 100%;
-  padding: 15px 0 8px 0;
+  padding: 10px 0 8px 0;
   font-size: 18px;
+  line-height: 1.3;
   text-align: center;
   color: #eee;
   background: rgba(0, 0, 0, 0.6);
@@ -373,42 +388,6 @@ body {
   cursor: pointer;
   color: #ffd500; }
 
-/* HODNOTENIE */
-#hodnotenieContainer {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-.samotneHodnotenie {
-  margin-bottom: 20px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-
-.quoteHodnotenie {
-  width: 92%; }
-
-.quoteHodnotenie blockquote {
-  padding: 10px 25px 0 10px; }
-
-.quoteSign {
-  text-align: right;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 60px;
-  margin-top: -15px;
-  width: 8%; }
-
-.menoHodnotenie {
-  text-align: right;
-  padding: 0 15px 0 0; }
-
 /* KONTAKT */
 #kontaktContainer {
   display: -webkit-box;
@@ -430,8 +409,16 @@ body {
   border-bottom: 1px solid #333;
   margin-bottom: 10px; }
 
+#kontakt-tel {
+  text-decoration: none;
+  color: #333; }
+
 #actualAdress {
   margin-bottom: 5px; }
+
+.kontakt-item-head {
+  display: inline-block;
+  width: 70px; }
 
 #mainSectionContainer #kontakt {
   padding-bottom: 50px; }
@@ -561,7 +548,7 @@ footer {
     line-height: 1.3;
     margin-bottom: 10px; }
   #reservation {
-    font-size: calc(20px + 1vw); }
+    font-size: 30px; }
   .sectionContainer {
     width: 80%;
     font-size: 18px; }
@@ -572,10 +559,15 @@ footer {
 
 @media (max-width: 666px) {
   #myNav a {
-    font-size: 20px; }
+    font-size: 18px; }
   #heading {
     font-size: 38px; }
   #subHeading {
+    font-size: 20px; }
+  #reservation {
+    padding: 8px 26px;
+    font-size: 26px; }
+  #emailLandingPage {
     font-size: 20px; }
   #mainSectionContainer section {
     padding: 50px 0 60px 0; }
@@ -584,18 +576,15 @@ footer {
     padding: 5px 8px; }
   #mainSectionContainer section .sectionHeading {
     font-size: 22px; }
-  .vybavenie {
-    font-size: 14px; }
+  .cennikHead {
+    font-size: 20px; }
   #cenaDodatok p {
     margin-bottom: 6px;
     font-size: 16px; }
   .galeriaColumn {
     width: 50%; }
-  .samotneHodnotenie {
-    width: 100%; }
-  .quoteSign {
-    font-size: 50px;
-    margin-top: -10px; }
+  .vybavenie-zoznam li {
+    margin-bottom: 12px; }
   #footerLeft {
     width: 50%; }
   #footerCenter {
@@ -612,15 +601,31 @@ footer {
     max-width: 100%;
     width: 100%; } }
 
-@media (max-width: 414px), (max-height: 414px) {
+@media (max-width: 560px) {
   #myNav a {
     font-size: 16px; }
   .navItem {
     padding: 8px 4px;
-    font-size: 16px; }
+    font-size: 16px;
+    width: 25%; }
+  #apartmanyNav {
+    display: none; } }
+
+@media (max-width: 414px), (max-height: 414px) {
+  #heading {
+    font-size: 32px; }
+  #subHeading {
+    font-size: 18px; }
+  #reservation {
+    padding: 8px 20px;
+    font-size: 22px; }
+  #emailLandingPage {
+    font-size: 18px; }
   .sectionContainer {
     width: 90%;
     font-size: 16px; }
+  .cennikHead {
+    font-size: 18px; }
   #footerContainer {
     width: 100%; }
   .sectionSubHeading {
@@ -629,4 +634,16 @@ footer {
     font-size: 15px; }
   #iconContainer img {
     height: 40px;
-    padding: 5px 3px; } }
+    padding: 5px 3px; }
+  .kontakt-item-head {
+    width: 60px; } }
+
+@media (max-height: 414px) {
+  #landingContainer {
+    margin-bottom: 2vh; }
+  #heading {
+    font-size: 32px; }
+  #subHeading {
+    font-size: 18px; }
+  #reservation {
+    font-size: 20px; } }
